--- a/Berufsunfahigkeit.html
+++ b/Berufsunfahigkeit.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.css">
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
@@ -101,40 +102,52 @@
           </div>
       </div>
    </header>
-   <div class="insurance-section">
+    <div class="contact-form">
        <div class="container">
-           <div class="col-md-4 i-col">
-              <h3>Privathaftpflicht</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti officia dolor quisquam autem ut cupiditate facilis, ea deserunt suscipit, neque vel quis. Placeat aspernatur magnam itaque doloremque ex delectus nihil.</p>
-                <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Tierhaftpflicht</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit saepe accusantium inventore animi corporis a assumenda autem dicta nostrum doloremque hic, neque commodi provident repellendus debitis, voluptatum officiis. Facere, sed.</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Rechtsschutzversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro repellat illum ad tenetur est reiciendis earum quo. Voluptatum, accusamus, doloremque? Provident dolorem quia dignissimos cum magni rerum nesciunt ratione doloribus.</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Risikolebensversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Hausratversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Gebaudeversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-       </div>
-   </div>
+       <h3>Berufsunfähigkeit</h3>
+        <div class="row">
+           <div class="col-md-8">
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="email">Berufsstatus:</label>
+                <div class="col-sm-8">
+                  <select name="dropdown" id="dropdown">
+                      <option value="">Bitte wahlen</option>
+                      <option value="">Angestellt</option>
+                      <option value="">Angstellter/r im Offentlichen Dienst</option>
+                      <option value="">Arbeiter </option>
+                      <option value="">Auszubidende/r</option>
+                      <option value="">Beamter/in</option>
+                      <option value="">Beamteanwarter/in</option>
+                      <option value="">Hausfrau/-mann</option>
+                      <option value="">Schuler/-in</option>
+                      <option value="">Selbststandige/r</option>
+                      <option value="">Student/in</option>
+                  </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Beruf:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Alter:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Gewunschte monatliche Absicherung: <br><small>(max.80% Ihres monatlichen Nettoeinkommens)</small></label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede">
+                </div>
+            </div>
+            <p class=""><a href="berufsunfahigkeitcontact.html" class="button" type="button">jetztvergleichen</a></p>
+            </div>
+        </div>
+        </div>
+    </div>
    <footer>
        <div class="footer-top">
            <div class="container">
