--- a/berufsunfahigkeitcontact.html
+++ b/berufsunfahigkeitcontact.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.css">
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
@@ -101,40 +102,61 @@
           </div>
       </div>
    </header>
-   <div class="insurance-section">
+    <div class="contact-form">
        <div class="container">
-           <div class="col-md-4 i-col">
-              <h3>Privathaftpflicht</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti officia dolor quisquam autem ut cupiditate facilis, ea deserunt suscipit, neque vel quis. Placeat aspernatur magnam itaque doloremque ex delectus nihil.</p>
-                <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Tierhaftpflicht</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit saepe accusantium inventore animi corporis a assumenda autem dicta nostrum doloremque hic, neque commodi provident repellendus debitis, voluptatum officiis. Facere, sed.</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Rechtsschutzversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro repellat illum ad tenetur est reiciendis earum quo. Voluptatum, accusamus, doloremque? Provident dolorem quia dignissimos cum magni rerum nesciunt ratione doloribus.</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Risikolebensversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Hausratversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-           <div class="col-md-4 i-col">
-              <h3>Gebaudeversicherung</h3>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam cum animi natus, incidunt, sint non ullam nisi cumque earum ex, officiis fugiat accusamus nesciunt tenetur ipsa mollitia, in saepe sequi?</p>
-               <a href="" class="button">Jetzt vergleichen</a>
-           </div>
-       </div>
-   </div>
+       <h3>Erhalten Sie jetzt Angebote von Experten fur Ihr Berufsunfahigkeitsabsicherung - vergleichen Sie sebst!</h3>
+        <div class="row">
+           <div class="col-md-8">
+            <div class="form-group">
+                <label class="control-label col-sm-1" for="andrede">Herr:</label>
+                <div class="col-sm-2">
+                 <input type="checkbox" name="Herr" value="" class="checkbox" checked>
+                </div>
+                <label class="control-label col-sm-1" for="andrede">Frau:</label>
+                <div class="col-sm-2">
+                 <input type="checkbox" name="Frau" value="" class="checkbox">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Vorname:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Nachname:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Telefonnummer:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">Email adresse:</label>
+                <div class="col-sm-8">
+                  <input type="text" name="andrede" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-4" for="andrede">haben Sie Anmerkungen?</label>
+                <div class="col-sm-8">
+                  <textarea name="message" id="" rows="10"></textarea>
+                </div>
+            </div>
+            <div class="checkbox-form-group">
+                <input type="checkbox" name="terms" value="terms" class="checkbox"> Ich akzeptiere die <a href="#" target="_blank">Datenschutzbestimmunge.</a><br>
+            </div>
+               <p class=""><a href="#" class="button2" type="button">Angebote eralten <small>kostenlos & unverbindlich</small></a></p>
+            </div>
+            <div class="col-md-4">
+            </div>
+        </div>
+        </div>
+    </div>
    <footer>
        <div class="footer-top">
            <div class="container">
