--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
-                    <li class="active dropdown"><a href="strom.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
+                    <li class="active dropdown"><a href="stromview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li><!--
@@ -63,7 +63,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>-->
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
+                    <li class="dropdown "><a href="gasview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
                         <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
