--- a/versicherungen.html
+++ b/versicherungen.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
-                    <li class="active dropdown"><a href="strom.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
+                    <li class="dropdown"><a href="stromview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li><!--
@@ -61,7 +61,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>-->
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
+                    <li class="dropdown "><a href="gasview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
                         <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
@@ -75,7 +75,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
                         </ul>-->
                     </li>
-                    <li class="dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
+                    <li class="active dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
                         <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Private Kfz-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Motorrad-Versicherung</a></li>
@@ -103,7 +103,7 @@
    </header>
    <div class="insurance-section">
        <div class="container">
-           <div class="col-md-4">
+           <div class="col-md-6">
               <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
                <ul class="insurance-list">
                    <li><a href="versicherungenview.html">KFZ-versicherung </a></li>
@@ -113,7 +113,7 @@
                    <li><a href="versicherungenview.html">Pferdeaftpflicht</a></li>
                </ul>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-6">
               <h3><a href="versicherungenview.html">Haus & Recht</a></h3>
                <ul class="insurance-list">
                    <li><a href="versicherungenview.html">Rechtsschutzversicherung</a></li>
@@ -123,17 +123,17 @@
                    <li><a href="versicherungenview.html">Reiseversicherung</a></li>
                </ul>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-6">
               <h3><a href="versicherungenview.html">Risiko & Vorsorge</a></h3>
                <ul class="insurance-list">
                    <li><a href="versicherungenview.html">Risikolebensversicherung</a></li>
                    <li><a href="versicherungenview.html">Unfalversicherung</a></li>
                    <li><a href="versicherungenview.html">Sterbegeldversicherung</a></li>
-                   <li><a href="versicherungenview.html">Berufsunfahigkeit</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Berufsunfahigkeit</a></li>
                    <li><a href="versicherungenview.html">Rentenversicherung</a></li>
                </ul>
            </div>
-           <div class="col-md-4">
+           <div class="col-md-6">
               <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
                <ul class="insurance-list">
                    <li><a href="versicherungenview.html">Private Krankenversicherung</a></li>
