--- a/Berufsunfahigkeit.html
+++ b/Berufsunfahigkeit.html
@@ -104,12 +104,14 @@
    </header>
     <div class="contact-form">
        <div class="container">
-       <h3>Berufsunfähigkeit</h3>
+       <div class="title">
+           <h3>Berufsunfahigkeitsverglich</h3>
+       </div>
         <div class="row">
            <div class="col-md-8">
             <div class="form-group">
-                <label class="control-label col-sm-4" for="email">Berufsstatus:</label>
-                <div class="col-sm-8">
+                <label class="control-label col-sm-6" for="email">Berufsstatus:</label>
+                <div class="col-sm-6">
                   <select name="dropdown" id="dropdown">
                       <option value="">Bitte wahlen</option>
                       <option value="">Angestellt</option>
@@ -126,24 +128,34 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">Beruf:</label>
-                <div class="col-sm-8">
+                <label class="control-label col-sm-6" for="andrede">Beruf:</label>
+                <div class="col-sm-6">
                   <input type="text" name="andrede">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">Alter:</label>
-                <div class="col-sm-8">
-                  <input type="text" name="andrede">
+                <label class="control-label col-sm-6" for="andrede">Geburtsdatum:</label>
+                <div class="col-sm-6">
+                  <input type="date" name="Geburtsdatum">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">Gewunschte monatliche Absicherung: <br><small>(max.80% Ihres monatlichen Nettoeinkommens)</small></label>
-                <div class="col-sm-8">
+                <label class="control-label col-sm-6" for="andrede">Gewunschte monatliche Absicherung: <br><small>(max.80% Ihres monatlichen Nettoeinkommens)</small></label>
+                <div class="col-sm-6">
                   <input type="text" name="andrede">
                 </div>
             </div>
-            <p class=""><a href="berufsunfahigkeitcontact.html" class="button" type="button">jetztvergleichen</a></p>
+            <p class="pull-right"><a href="berufsunfahigkeitcontact.html" class="button" type="button">jetztvergleichen</a></p>
+            </div>
+            <div class="col-md-4">
+                <ul class="bottom-form">
+                   <li>
+                       <h3>Geprüft und Zertifiziert</h3>
+                       <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
+                       <p><b>Rufen Sie uns an!</b></p>
+                       <h3><span class="fa fa-phone"></span> 0800/72 45 816 </h3>
+                   </li>
+               </ul>   
             </div>
         </div>
         </div>
