--- a/berufsunfahigkeitcontact.html
+++ b/berufsunfahigkeitcontact.html
@@ -104,16 +104,19 @@
    </header>
     <div class="contact-form">
        <div class="container">
-       <h3>Erhalten Sie jetzt Angebote von Experten fur Ihr Berufsunfahigkeitsabsicherung - vergleichen Sie sebst!</h3>
+       <div class="title">
+       <h3 class="text-center">Berufsunfahigkeitsversicherung zu top-konditionen! <br>
+        <span>erhalten sie kostenlos 3 angebote und vergleichen sie selbst</span></h3>
+       </div>
         <div class="row">
-           <div class="col-md-8">
+           <div class="col-md-6">
             <div class="form-group">
                 <label class="control-label col-sm-1" for="andrede">Herr:</label>
-                <div class="col-sm-2">
+                <div class="col-sm-1">
                  <input type="checkbox" name="Herr" value="" class="checkbox" checked>
                 </div>
                 <label class="control-label col-sm-1" for="andrede">Frau:</label>
-                <div class="col-sm-2">
+                <div class="col-sm-1">
                  <input type="checkbox" name="Frau" value="" class="checkbox">
                 </div>
             </div>
@@ -141,18 +144,20 @@
                   <input type="text" name="andrede" required>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">haben Sie Anmerkungen?</label>
-                <div class="col-sm-8">
-                  <textarea name="message" id="" rows="10"></textarea>
-                </div>
             </div>
+            <div class="col-md-6">
             <div class="checkbox-form-group">
                 <input type="checkbox" name="terms" value="terms" class="checkbox"> Ich akzeptiere die <a href="#" target="_blank">Datenschutzbestimmunge.</a><br>
             </div>
-               <p class=""><a href="#" class="button2" type="button">Angebote eralten <small>kostenlos & unverbindlich</small></a></p>
+            <div class="form-group">
+            <div class="row">
+                <label class="control-label col-sm-12" for="andrede">haben Sie Anmerkungen?</label>
+                <div class="col-sm-12">
+                  <textarea name="message" id="" rows="5"></textarea>
+                </div>
             </div>
-            <div class="col-md-4">
+            </div>
+               <p class=""><a href="#" class="button2" type="button">Angebote eralten <small>kostenlos & unverbindlich</small></a></p>
             </div>
         </div>
         </div>
