--- a/berufsunfahigkeitcontact.html
+++ b/berufsunfahigkeitcontact.html
@@ -104,60 +104,59 @@
    </header>
     <div class="contact-form">
        <div class="container">
+       <div class="row">
        <div class="title">
        <h3 class="text-center">Berufsunfahigkeitsversicherung zu top-konditionen! <br>
         <span>erhalten sie kostenlos 3 angebote und vergleichen sie selbst</span></h3>
        </div>
+       </div>
         <div class="row">
-           <div class="col-md-6">
+            <div class="inner-contact">
+           <div class="col-md-6 col-md-offset-1">
             <div class="form-group">
                 <label class="control-label col-sm-1" for="andrede">Herr:</label>
                 <div class="col-sm-1">
-                 <input type="checkbox" name="Herr" value="" class="checkbox" checked>
+                 <input type="checkbox" name="Herr" value="Herr" class="checkbox" checked>
                 </div>
                 <label class="control-label col-sm-1" for="andrede">Frau:</label>
                 <div class="col-sm-1">
-                 <input type="checkbox" name="Frau" value="" class="checkbox">
+                 <input type="checkbox" name="Herr" value="Herr" class="checkbox">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">Vorname:</label>
-                <div class="col-sm-8">
-                  <input type="text" name="andrede" required>
+                <div class="col-sm-6">
+                  <input type="text" name="andrede" placeholder="Vorname" required>
+                </div>
+                <div class="col-sm-6">
+                  <input type="text" name="andrede" placeholder="Nachname" required>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">Nachname:</label>
-                <div class="col-sm-8">
-                  <input type="text" name="andrede" required>
+                <div class="col-sm-6">
+                  <input type="text" name="andrede" placeholder="Telefonnummer" required>
+                </div>
+                <div class="col-sm-6">
+                  <input type="text" name="andrede" placeholder="Email adresse" required>
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">Telefonnummer:</label>
-                <div class="col-sm-8">
-                  <input type="text" name="andrede" required>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="andrede">Email adresse:</label>
-                <div class="col-sm-8">
-                  <input type="text" name="andrede" required>
+                <label class="control-label col-sm-12" for="andrede"></label>
+                <div class="col-sm-12">
+                  <textarea name="message" id="" rows="5" placeholder="haben Sie Anmerkungen?"></textarea>
                 </div>
             </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
+            <ul class="contact-list-item">
+                <li>Kostenlos & unverbindlich</li>
+                <li>Schnell & einfach</li>
+                <li>100% Datensicherheit</li>
+            </ul>
             <div class="checkbox-form-group">
                 <input type="checkbox" name="terms" value="terms" class="checkbox"> Ich akzeptiere die <a href="#" target="_blank">Datenschutzbestimmunge.</a><br>
             </div>
-            <div class="form-group">
-            <div class="row">
-                <label class="control-label col-sm-12" for="andrede">haben Sie Anmerkungen?</label>
-                <div class="col-sm-12">
-                  <textarea name="message" id="" rows="5"></textarea>
-                </div>
+            <p class=""><a href="#" class="button2" type="button">Angebote eralten <small>kostenlos & unverbindlich</small></a></p>
             </div>
-            </div>
-               <p class=""><a href="#" class="button2" type="button">Angebote eralten <small>kostenlos & unverbindlich</small></a></p>
             </div>
         </div>
         </div>
