--- a/berufsunfahigkeitcontact.html
+++ b/berufsunfahigkeitcontact.html
@@ -116,11 +116,11 @@
             <div class="form-group">
                 <label class="control-label col-sm-1" for="andrede">Herr:</label>
                 <div class="col-sm-1">
-                 <input type="checkbox" name="Herr" value="Herr" class="checkbox" checked>
+                 <input type="radio" name="name" value="Herr" class="checkbox">
                 </div>
                 <label class="control-label col-sm-1" for="andrede">Frau:</label>
                 <div class="col-sm-1">
-                 <input type="checkbox" name="Herr" value="Herr" class="checkbox">
+                 <input type="radio" name="name" value="Frau" class="checkbox">
                 </div>
             </div>
             <div class="form-group">
