--- a/versicherungen.html
+++ b/versicherungen.html
@@ -47,10 +47,10 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
-                    <li class="dropdown"><a href="stromview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
-                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                    <li class="active dropdown"><a href="stromview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM </a>
+                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li><!--
+                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Berlin</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Hamburg</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom München</a></li>
@@ -58,10 +58,10 @@
                             <li role="presentation"><a href="#" role="menuitem">Strom Frankfurt</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Stuttgart</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Dortmund</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>-->
-                        </ul>
+                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
+                        </ul>-->
                     </li>
-                    <li class="dropdown "><a href="gasview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
+                    <li class="dropdown "><a href="gasview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS </a>
                         <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
@@ -75,16 +75,12 @@
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
                         </ul>-->
                     </li>
-                    <li class="active dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
-                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                    <li class="dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
+                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Private Kfz-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Motorrad-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Rechtsschutzversicherung</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Privathaftpflichtversicherung</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Tierhalterhaftpflichtversicherung</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Haus- und Grundbesitzerhaftpflicht</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Öltankversicherung</a></li>
-                        </ul>-->
+                        </ul>
                     </li>
                     <li class="dropdown "><a href="fragenundantworten.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN</a>
                     </li>
@@ -106,29 +102,29 @@
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
                <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">KFZ-versicherung </a></li>
-                   <li><a href="versicherungenview.html">Motorradversicherung</a></li>
-                   <li><a href="versicherungenview.html">Privathaftpflicht</a></li>
-                   <li><a href="versicherungenview.html">Hundehaftpflicht</a></li>
-                   <li><a href="versicherungenview.html">Pferdeaftpflicht</a></li>
+                   <li><a href="Berufsunfahigkeit.html">KFZ-versicherung </a></li>
+                   <li><a href="Berufsunfahigkeit.html">Motorradversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Privathaftpflicht</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Hundehaftpflicht</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Pferdeaftpflicht</a></li>
                </ul>
            </div>
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Haus & Recht</a></h3>
                <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">Rechtsschutzversicherung</a></li>
-                   <li><a href="versicherungenview.html">Hausratversicherung</a></li>
-                   <li><a href="versicherungenview.html">Wohngebaudeversicherung</a></li>
-                   <li><a href="versicherungenview.html">Hundekrankenversicherung</a></li>
-                   <li><a href="versicherungenview.html">Reiseversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Rechtsschutzversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Hausratversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Wohngebaudeversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Hundekrankenversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Reiseversicherung</a></li>
                </ul>
            </div>
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Risiko & Vorsorge</a></h3>
                <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">Risikolebensversicherung</a></li>
-                   <li><a href="versicherungenview.html">Unfalversicherung</a></li>
-                   <li><a href="versicherungenview.html">Sterbegeldversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Risikolebensversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Unfalversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Sterbegeldversicherung</a></li>
                    <li><a href="Berufsunfahigkeit.html">Berufsunfahigkeit</a></li>
                    <li><a href="versicherungenview.html">Rentenversicherung</a></li>
                </ul>
@@ -136,11 +132,11 @@
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
                <ul class="insurance-list">
-                   <li><a href="versicherungenview.html">Private Krankenversicherung</a></li>
-                   <li><a href="versicherungenview.html">Gesetzliche Krankenversicherung</a></li>
-                   <li><a href="versicherungenview.html">Zahnzusatzversicherung</a></li>
-                   <li><a href="versicherungenview.html">Heilpraktiker & Brille</a></li>
-                   <li><a href="versicherungenview.html">Krankenhauszusatz</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Private Krankenversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Gesetzliche Krankenversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Zahnzusatzversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Heilpraktiker & Brille</a></li>
+                   <li><a href="Berufsunfahigkeit.html">Krankenhauszusatz</a></li>
                </ul>
            </div>
        </div>
