--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
-                    <li class="active dropdown"><a href="stromview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
-                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                    <li class="active dropdown"><a href="stromview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM </a>
+                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li><!--
+                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Berlin</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Hamburg</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom München</a></li>
@@ -60,10 +60,10 @@
                             <li role="presentation"><a href="#" role="menuitem">Strom Frankfurt</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Stuttgart</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Strom Dortmund</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>-->
-                        </ul>
+                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
+                        </ul>-->
                     </li>
-                    <li class="dropdown "><a href="gasview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
+                    <li class="dropdown "><a href="gasview.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS </a>
                         <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
@@ -78,15 +78,11 @@
                         </ul>-->
                     </li>
                     <li class="dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
-                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Private Kfz-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Motorrad-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Rechtsschutzversicherung</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Privathaftpflichtversicherung</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Tierhalterhaftpflichtversicherung</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Haus- und Grundbesitzerhaftpflicht</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Öltankversicherung</a></li>
-                        </ul>-->
+                        </ul>
                     </li>
                     <li class="dropdown "><a href="fragenundantworten.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN</a>
                     </li>
@@ -104,7 +100,8 @@
       </div>
    </header>
    <div class="banner">
-       <div class="form animated flipInX">
+      <div class="container">
+       <div class="form animated slideInDown">
            <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home"><span class="fa fa-home"></span>  <b>Stromvergleich</b></a></li>
                 <li><a data-toggle="tab" href="#menu1"><span class="fa fa-plug"></span>  <b>Gasvergleich</b></a></li>
@@ -115,23 +112,24 @@
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
                   <form class="form-horizontal">
-                       <div class="col-md-6">
+                      <div class="row">
+                       <div class="col-md-5 col-md-offset-1">
                             <div class="form-group">
-                              <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
-                              <div class="col-sm-8">
+                              <label class="control-label col-sm-5 col-md-offset-1" for="email">Postleitzahl :</label>
+                              <div class="col-sm-5">
                                 <input type="email" class="form-control" id="email" placeholder="">
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Verbrauch:</label>
-                              <div class="col-sm-8">          
+                              <label class="control-label col-sm-5  col-md-offset-1" for="pwd">Verbrauch:</label>
+                              <div class="col-sm-5">          
                                 <input type="text" name="receiver" id="receiver" value="" placeholder="2000" />
                               </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <div class="form-group">
-                              <label class="control-label col-sm-7" for="email">Personen im Haushalt:</label>
+                              <label class="control-label col-sm-5  col-md-offset-1" for="email">Personen im Haushalt:</label>
                               <div class="col-sm-5">
                                 <select name="dropdown" id="dropdown">
                                     <option value="2000">1</option>
@@ -142,8 +140,8 @@
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Zahlungsweise:</label>
-                              <div class="col-sm-8">          
+                              <label class="control-label col-sm-5  col-md-offset-1" for="pwd">Zahlungsweise:</label>
+                              <div class="col-sm-5">          
                                 <select>
                                     <option>Monatlich</option>
                                     <option>alle, inkl. Vorkasse</option>
@@ -151,16 +149,19 @@
                               </div>
                             </div>
                         </div>
+                        </div>
+                        <div class="row">
                         <p class="center"><a href="stromview.html" class="button" type="button">Jetzt vergleichen</a></p>
+                        </div>
                       </form>
                 </div>
                 <div id="menu1" class="tab-pane fade">
                     <form class="form-horizontal">
                       <div class="row">
-                       <div class="col-md-6">
+                       <div class="col-md-5 col-md-offset-2">
                             <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Wohnungsgröße :</label>
-                              <div class="col-sm-8">          
+                              <label class="control-label col-sm-5" for="pwd">Wohnungsgröße :</label>
+                              <div class="col-sm-5">          
                                 <select name="dropdown2" id="dropdown2">
                                     <option value="5000">50 m2</option>
                                     <option value="12000">100 m2 </option>
@@ -171,15 +172,15 @@
                             </div>
                             <div class="form-group">
                               <label class="control-label col-sm-5" for="email">Verbrauch:</label>
-                              <div class="col-sm-7">
+                              <div class="col-sm-5">
                                <input type="text" name="receiver2" id="receiver2" value="" placeholder="5000" />
                               </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <div class="form-group">
                               <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
-                              <div class="col-sm-8">
+                              <div class="col-sm-5">
                                 <input type="email" class="form-control" id="email" placeholder="">
                               </div>
                             </div>
@@ -203,21 +204,22 @@
                             </div>
                           <div class="col-md-3"></div>
                         </div>
+                        <div class="row">
                         <p class="center"><a href="kfz.html" class="button" type="button">Jetzt vergleichen</a></p>
+                        </div>
                       </form>
                 </div>
                 <div id="menu3" class="tab-pane fade">
                     <form class="form-horizontal">
                       <div class="row">
-                          <div class="col-md-3"></div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 col-md-offset-3">
                                 <div class="heading"> 
                                 <h3>Bis zu 500 € sparen!</h3>
                                 <p>Ganz einfach vergleichen und sparen!</p>
                                 </div>
                                 <div class="form-group">
-                                  <label class="control-label col-sm-4" for="pwd">Beruf : </label>
-                                  <div class="col-sm-8">          
+                                  <label class="control-label col-sm-3 col-md-offset-2" for="pwd">Beruf : </label>
+                                  <div class="col-sm-5">          
                                     <select>
                                    <option>Studentin</option>
                                     <option>Angestellter</option>
@@ -227,9 +229,10 @@
                                   </div>
                                 </div>
                             </div>
-                          <div class="col-md-3"></div>
                         </div>
+                        <div class="row">
                         <p class="center"><a href="" class="button" type="button">Jetzt vergleichen</a></p>
+                        </div>
                       </form>
                 </div>
                 <div id="menu4" class="tab-pane fade">
@@ -242,7 +245,7 @@
                                 <p>Ganz einfach vergleichen und sparen!</p>
                                 </div>
                                 <div class="form-group">
-                                  <label class="control-label col-sm-4" for="pwd">Tarif : </label>
+                                  <label class="control-label col-sm-3 col-md-offset-1" for="pwd">Tarif : </label>
                                   <div class="col-sm-8">          
                                     <select>
                                    <option>Familie/lebensgemeinschaft mit kinder</option>
@@ -255,11 +258,14 @@
                             </div>
                           <div class="col-md-3"></div>
                         </div>
+                        <div class="row">
                         <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
+                        </div>
                       </form>
                 </div>
               </div>
        </div>
+      </div>
    </div>
    <div class="banner-bottom">
        <div class="container">
